reworked script to include only javscript - working questions and score without timer

--- a/index.html
+++ b/index.html
@@ -15,15 +15,23 @@
     <div id="start-container" class="container">
         <div class="row mt-5 justify-content-center">
             <div class="col">
-                <button type="button" id="start-btn" onclick="startQuiz()" class="btn btn-secondary btn-lg">Start Quiz!</button>
+                <button type="button" id="start-btn" onclick="startQuiz()" class="btn btn-secondary btn-lg">Start
+                    Quiz!</button>
             </div>
         </div>
     </div>
     <div id="quiz-space" class="container d-none">
 
     </div>
+    <div id="timer-space" class="container d-none">
+        <div class="row">
+            <div class="col">
+                <h1 id="clock" class="display-4 clock text-center">00:00:00</h1>
+            </div>
+        </div>
+    </div>
     <div id="result-space" class="container d-none">
-        
+
     </div>
 
 
